--- a/.editorconfig
+++ b/.editorconfig
@@ -28,10 +28,24 @@ indent_style = unset
 [/assets/email*]
 indent_size = unset
 
-# ignore python and markdown
-[*.{py,md}]
+[/assets/haplotype_maps/*]
+charset = unset
+end_of_line = unset
+insert_final_newline = unset
+trim_trailing_whitespace = unset
 indent_style = unset
 
-# ignore ro-crate metadata files
-[**/ro-crate-metadata.json]
+[/utils/nf-cmgg-sampletracking/*]
+charset = unset
+end_of_line = unset
 insert_final_newline = unset
+trim_trailing_whitespace = unset
+indent_style = unset
+
+# ignore Readme
+[README.md]
+indent_style = unset
+
+# ignore python
+[*.{py,md}]
+indent_style = unset
