--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,11 +18,50 @@ process {
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
-    withName: FASTQC {
-        ext.args = '--quiet'
+    // BWA mem2
+    withName: "BWA_MEM" {
+        ext.args = {[
+            "-K 100000000",
+            "-p",
+            "-v 3",
+            "-Y",
+            "-c 250",
+            meta.samplename  ? "-R \"@RG\\tID:${meta.samplename}\\tSM:${meta.samplename}\\tPL:ILLUMINA\"" : "",
+        ].join(" ").trim()}
+        ext.args2 = "-m 2G --write-index --output-fmt cram --output-fmt-option archive"
     }
 
-    withName: 'MULTIQC' {
+    // Picard CrosscheckFingerprints
+    withName: "PICARD_CROSSCHECKFINGERPRINTS" {
+        publishDir = [ enabled:false ]
+        ext.args = {[
+            "--CROSSCHECK_BY SAMPLE",
+            "--CROSSCHECK_MODE CHECK_ALL_OTHERS",
+            "--CALCULATE_TUMOR_AWARE_RESULTS false",
+            "--LOD_THRESHOLD 5.0",
+            "--EXIT_CODE_WHEN_MISMATCH 0",
+            "--VALIDATION_STRINGENCY LENIENT",
+        ].join(" ").trim()}
+    }
+
+    withName: "NGSBITS_SAMPLEGENDER" {
+        publishDir = [ enabled:false ]
+        ext.prefix = { "${meta.id}.xy" }
+        ext.args   = "-max_female ${params.max_yx_female} -min_male ${params.min_yx_male}"
+        ext.args2  = "-min_female ${params.min_hetx_female} -max_male ${params.max_hetx_male}"
+        ext.args3  = "-sry_cov ${params.min_sry_cov_male}"
+    }
+
+    withName: 'MULTIQC_POOLS' {
+        ext.args   = { params.multiqc_title ? "--title \"${params.multiqc_title}_${meta.id}\"" : "--title \"$meta.id\"" }
+        publishDir = [
+            path: { "${params.outdir}/multiqc" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'MULTIQC_MAIN' {
         ext.args   = { params.multiqc_title ? "--title \"$params.multiqc_title\"" : '' }
         publishDir = [
             path: { "${params.outdir}/multiqc" },
