--- a/conf/test.config
+++ b/conf/test.config
@@ -10,21 +10,32 @@
 ----------------------------------------------------------------------------------------
 */
 
-process {
-    resourceLimits = [
-        cpus: 4,
-        memory: '15.GB',
-        time: '1.h'
-    ]
-}
-
 params {
     config_profile_name        = 'Test profile'
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
-    // Input data
-    // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
-    // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = params.pipelines_testdata_base_path + 'viralrecon/samplesheet/samplesheet_test_illumina_amplicon.csv'// Genome references
-    genome = 'R64-1-1'
+    input = "${projectDir}/assets/samplesheet.csv"
+    bwa_index = "s3://test-data/genomics/homo_sapiens/genome/bwa/"
+    fasta   = "https://github.com/nf-cmgg/test-datasets/raw/sampletracking/data/genomics/homo_sapiens/genome/seq/GCA_000001405.15_GRCh38_full_plus_hs38d1_analysis_set_chr21.fna"
+    fai    = "https://github.com/nf-cmgg/test-datasets/raw/sampletracking/data/genomics/homo_sapiens/genome/seq/GCA_000001405.15_GRCh38_full_plus_hs38d1_analysis_set_chr21.fna.fai"
+    haplotype_map = "https://github.com/nf-cmgg/test-datasets/raw/sampletracking/data/genomics/homo_sapiens/genome/picard/haplotype_map.txt"
 }
+
+aws {
+    client {
+        endpoint = "https://s3.ugent.be"
+        protocol = "https"
+        s3PathStyleAccess = true
+        connectionTimeout = 60000
+    }
+}
+
+process {
+    // Limit resources so that this can run on GitHub Actions
+    resourceLimits = [
+        cpus  : 2,
+        memory: 6.GB,
+        time  : 6.h
+    ]
+}
+
