--- a/nextflow.config
+++ b/nextflow.config
@@ -9,179 +9,176 @@
 // Global default params, used in configs
 params {
 
-    // TODO nf-core: Specify your pipeline's command line flags
     // Input options
-    input                      = null
+    input                       = null
 
     // References
-    genome                     = null
-    igenomes_base              = 's3://ngi-igenomes/igenomes/'
-    igenomes_ignore            = false
+    fasta                       = null
+    fai                         = null
+    bwa_index                   = null
+    haplotype_map               = null
+
+    // Sex prediction
+    max_yx_female               = 0.06
+    min_yx_male                 = 0.09
+    min_sry_cov_male            = 20
+    min_hetx_female             = 0.25
+    max_hetx_male               = 0.05
 
     // MultiQC options
-    multiqc_config             = null
-    multiqc_title              = null
-    multiqc_logo               = null
-    max_multiqc_email_size     = '25.MB'
+    multiqc_config              = null
+    multiqc_title               = null
+    multiqc_logo                = null
+    max_multiqc_email_size      = '25.MB'
     multiqc_methods_description = null
 
     // Boilerplate options
-    outdir                       = null
-    publish_dir_mode             = 'copy'
-    email                        = null
-    email_on_fail                = null
-    plaintext_email              = false
-    monochrome_logs              = false
-    hook_url                     = null
-    help                         = false
-    help_full                    = false
-    show_hidden                  = false
-    version                      = false
-    pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/'
-    trace_report_suffix          = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')// Config options
+    outdir                     = './results'
+    publish_dir_mode           = 'copy'
+    email                      = null
+    email_on_fail              = null
+    plaintext_email            = false
+    monochrome_logs            = false
+    hook_url                   = null
+    help                       = false
+    version                    = false
+
+    // Config options
     config_profile_name        = null
     config_profile_description = null
-
     custom_config_version      = 'master'
     custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
     config_profile_contact     = null
     config_profile_url         = null
 
     // Schema validation default options
-    validate_params            = true
+    validate_params                  = true
+
 }
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
 
-profiles {
-    debug {
-        dumpHashes              = true
-        process.beforeScript    = 'echo $HOSTNAME'
-        cleanup                 = false
-        nextflow.enable.configProcessNamesValidation = true
-    }
-    conda {
-        conda.enabled           = true
-        docker.enabled          = false
-        singularity.enabled     = false
-        podman.enabled          = false
-        shifter.enabled         = false
-        charliecloud.enabled    = false
-        conda.channels          = ['conda-forge', 'bioconda']
-        apptainer.enabled       = false
-    }
-    mamba {
-        conda.enabled           = true
-        conda.useMamba          = true
-        docker.enabled          = false
-        singularity.enabled     = false
-        podman.enabled          = false
-        shifter.enabled         = false
-        charliecloud.enabled    = false
-        apptainer.enabled       = false
-    }
-    docker {
-        docker.enabled          = true
-        conda.enabled           = false
-        singularity.enabled     = false
-        podman.enabled          = false
-        shifter.enabled         = false
-        charliecloud.enabled    = false
-        apptainer.enabled       = false
-        docker.runOptions       = '-u $(id -u):$(id -g)'
-    }
-    arm {
-        docker.runOptions       = '-u $(id -u):$(id -g) --platform=linux/amd64'
-    }
-    singularity {
-        singularity.enabled     = true
-        singularity.autoMounts  = true
-        conda.enabled           = false
-        docker.enabled          = false
-        podman.enabled          = false
-        shifter.enabled         = false
-        charliecloud.enabled    = false
-        apptainer.enabled       = false
-    }
-    podman {
-        podman.enabled          = true
-        conda.enabled           = false
-        docker.enabled          = false
-        singularity.enabled     = false
-        shifter.enabled         = false
-        charliecloud.enabled    = false
-        apptainer.enabled       = false
-    }
-    shifter {
-        shifter.enabled         = true
-        conda.enabled           = false
-        docker.enabled          = false
-        singularity.enabled     = false
-        podman.enabled          = false
-        charliecloud.enabled    = false
-        apptainer.enabled       = false
-    }
-    charliecloud {
-        charliecloud.enabled    = true
-        conda.enabled           = false
-        docker.enabled          = false
-        singularity.enabled     = false
-        podman.enabled          = false
-        shifter.enabled         = false
-        apptainer.enabled       = false
-    }
-    apptainer {
-        apptainer.enabled       = true
-        apptainer.autoMounts    = true
-        conda.enabled           = false
-        docker.enabled          = false
-        singularity.enabled     = false
-        podman.enabled          = false
-        shifter.enabled         = false
-        charliecloud.enabled    = false
-    }
-    wave {
-        apptainer.ociAutoPull   = true
-        singularity.ociAutoPull = true
-        wave.enabled            = true
-        wave.freeze             = true
-        wave.strategy           = 'conda,container'
-    }
-    gitpod {
-        executor.name           = 'local'
-        executor.cpus           = 4
-        executor.memory         = 8.GB
-        process {
-            resourceLimits = [
-                memory: 8.GB,
-                cpus  : 4,
-                time  : 1.h
-            ]
-        }
-    }
-    test      { includeConfig 'conf/test.config'      }
-    test_full { includeConfig 'conf/test_full.config' }
-}
-
-// Load nf-core custom profiles from different Institutions
+// Load nf-core custom profiles from different Institutions",
 includeConfig !System.getenv('NXF_OFFLINE') && params.custom_config_base ? "${params.custom_config_base}/nfcore_custom.config" : "/dev/null"
 
 // Load nf-cmgg/sampletracking custom profiles from different institutions.
-// TODO nf-core: Optionally, you can add a pipeline-specific nf-core config at https://github.com/nf-core/configs
-// includeConfig !System.getenv('NXF_OFFLINE') && params.custom_config_base ? "${params.custom_config_base}/pipeline/sampletracking.config" : "/dev/null"
+// Warning: Uncomment only if a pipeline-specific institutional config already exists on nf-core/configs!
+// try {
+//   includeConfig "${params.custom_config_base}/pipeline/sampletracking.config"
+// } catch (Exception e) {
+//   System.err.println("WARNING: Could not load nf-core/config/sampletracking profiles: ${params.custom_config_base}/pipeline/sampletracking.config")
+// }
+profiles {
+    debug {
+        dumpHashes             = true
+        process.beforeScript   = 'echo $HOSTNAME'
+        cleanup                = false
+        nextflow.enable.configProcessNamesValidation = true
+    }
+    conda {
+        conda.enabled          = true
+        conda.channels         = ['conda-forge', 'bioconda']
+        docker.enabled         = false
+        singularity.enabled    = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+        apptainer.enabled      = false
+    }
+    mamba {
+        conda.enabled          = true
+        conda.useMamba         = true
+        docker.enabled         = false
+        singularity.enabled    = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+        apptainer.enabled      = false
+    }
+    docker {
+        docker.enabled         = true
+        conda.enabled          = false
+        singularity.enabled    = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+        apptainer.enabled      = false
+        docker.runOptions      = '-u $(id -u):$(id -g)'
+    }
+    arm {
+        docker.runOptions      = '-u $(id -u):$(id -g) --platform=linux/amd64'
+    }
+    singularity {
+        singularity.enabled    = true
+        singularity.autoMounts = true
+        conda.enabled          = false
+        docker.enabled         = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+        apptainer.enabled      = false
+    }
+    podman {
+        podman.enabled         = true
+        conda.enabled          = false
+        docker.enabled         = false
+        singularity.enabled    = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+        apptainer.enabled      = false
+    }
+    shifter {
+        shifter.enabled        = true
+        conda.enabled          = false
+        docker.enabled         = false
+        singularity.enabled    = false
+        podman.enabled         = false
+        charliecloud.enabled   = false
+        apptainer.enabled      = false
+    }
+    charliecloud {
+        charliecloud.enabled   = true
+        conda.enabled          = false
+        docker.enabled         = false
+        singularity.enabled    = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        apptainer.enabled      = false
+    }
+    apptainer {
+        apptainer.enabled      = true
+        apptainer.autoMounts   = true
+        conda.enabled          = false
+        docker.enabled         = false
+        singularity.enabled    = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+    }
+    gitpod {
+        executor.name          = 'local'
+        executor.cpus          = 4
+        executor.memory        = 8.GB
+    }
+    slurm     { includeConfig 'conf/slurm.config'     }
+    test      { includeConfig 'conf/test.config'      }
+    test_full { includeConfig 'conf/test_full.config' }
 
-// Set default registry for Apptainer, Docker, Podman, Charliecloud and Singularity independent of -profile
-// Will not be used unless Apptainer / Docker / Podman / Charliecloud / Singularity are enabled
+}
+
+// Set default registry for Apptainer, Docker, Podman and Singularity independent of -profile
+// Will not be used unless Apptainer / Docker / Podman / Singularity are enabled
 // Set to your registry if you have a mirror of containers
-apptainer.registry    = 'quay.io'
-docker.registry       = 'quay.io'
-podman.registry       = 'quay.io'
-singularity.registry  = 'quay.io'
-charliecloud.registry = 'quay.io'
+apptainer.registry   = 'quay.io'
+docker.registry      = 'quay.io'
+podman.registry      = 'quay.io'
+singularity.registry = 'quay.io'
 
-// Load igenomes.config if required
-includeConfig !params.igenomes_ignore ? 'conf/igenomes.config' : 'conf/igenomes_ignored.config'
+// Nextflow plugins
+plugins {
+    id 'nf-schema@2.2.0' // Validation of pipeline parameters and creation of an input channel from a sample sheet
+}
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
 // The JULIA depot path has been adjusted to a fixed path `/usr/local/share/julia` that needs to be used for packages in the container.
@@ -194,72 +191,61 @@ env {
     JULIA_DEPOT_PATH = "/usr/local/share/julia"
 }
 
-// Set bash options
-process.shell = [
-    "bash",
-    "-C",         // No clobber - prevent output redirection from overwriting files.
-    "-e",         // Exit if a tool returns a non-zero status/exit code
-    "-u",         // Treat unset variables and parameters as an error
-    "-o",         // Returns the status of the last command to exit..
-    "pipefail"    //   ..with a non-zero status or zero if all successfully execute
-]
+// Capture exit codes from upstream processes when piping
+process.shell = ['/bin/bash', '-euo', 'pipefail']
 
 // Disable process selector warnings by default. Use debug profile to enable warnings.
 nextflow.enable.configProcessNamesValidation = false
 
 timeline {
     enabled = true
-    file    = "${params.outdir}/pipeline_info/execution_timeline_${params.trace_report_suffix}.html"
+    file    = "${params.outdir}/pipeline_info/execution_timeline_${new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')}.html"
 }
 report {
     enabled = true
-    file    = "${params.outdir}/pipeline_info/execution_report_${params.trace_report_suffix}.html"
+    file    = "${params.outdir}/pipeline_info/execution_report_${new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')}.html"
 }
 trace {
     enabled = true
-    file    = "${params.outdir}/pipeline_info/execution_trace_${params.trace_report_suffix}.txt"
+    file    = "${params.outdir}/pipeline_info/execution_trace_${new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')}.txt"
 }
 dag {
     enabled = true
-    file    = "${params.outdir}/pipeline_info/pipeline_dag_${params.trace_report_suffix}.html"
+    file    = "${params.outdir}/pipeline_info/pipeline_dag_${new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')}.html"
 }
 
 manifest {
     name            = 'nf-cmgg/sampletracking'
-    author          = """CMGG IT""" // The author field is deprecated from Nextflow version 24.10.0, use contributors instead
-    contributors    = [
-        // TODO nf-core: Update the field with the details of the contributors to your pipeline. New with Nextflow version 24.10.0
-        [
-            name: 'CMGG IT',
-            affiliation: '',
-            email: '',
-            github: '',
-            contribution: [], // List of contribution types ('author', 'maintainer' or 'contributor')
-            orcid: ''
-        ],
-    ]
+    author          = """@matthdsm"""
     homePage        = 'https://github.com/nf-cmgg/sampletracking'
     description     = """CMGG Sampletracking workflow"""
     mainScript      = 'main.nf'
-    defaultBranch   = 'master'
-    nextflowVersion = '!>=24.04.2'
+    nextflowVersion = '!>=24.04.1'
     version         = '1.0.0'
     doi             = ''
 }
 
-// Nextflow plugins
-plugins {
-    id 'nf-schema@2.3.0' // Validation of pipeline parameters and creation of an input channel from a sample sheet
-}
-
 validation {
-    defaultIgnoreParams = ["genomes"]
-    monochromeLogs = params.monochrome_logs
+    defaultIgnoreParams = ["genomes", "test_data", "igenomes_base"]
     help {
         enabled = true
-        command = "nextflow run nf-cmgg/sampletracking -profile <docker/singularity/.../institute> --input samplesheet.csv --outdir <OUTDIR>"
+        command = "nextflow run $manifest.name -profile <docker/singularity/.../institute> --input samplesheet.csv --outdir <OUTDIR>"
         fullParameter = "help_full"
         showHiddenParameter = "show_hidden"
+        beforeText = """
+-\033[2m----------------------------------------------------\033[0m-
+                                        \033[0;34m    ///\033[0;32m/// \033[0m
+\033[0;34m        ___     __   _  _   __   __     \033[0;34m  ///\033[0;32m///// \033[0m
+\033[0;34m  |\\ | |__  __ /  ` | \\/ | / _` / _`    \033[0;34m////\033[0;32m////// \033[0m
+\033[0;34m  | \\| |       \\__, |    | \\__| \\__|    \033[0;34m///\033[0;32m///// \033[0m
+                                        \033[0;34m///\033[0;32m/// \033[0m
+\033[0;35m  ${manifest.name} ${manifest.version}\033[0m
+-\033[2m----------------------------------------------------\033[0m-
+"""
+    }
+    summary {
+        beforeText = validation.help.beforeText
+        hideParams = ["genomes"]
     }
 }
 
