--- a/nextflow.config
+++ b/nextflow.config
@@ -221,7 +221,7 @@ manifest {
     description     = """CMGG Sampletracking workflow"""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=24.04.1'
-    version         = '1.0.0'
+    version         = '1.1.0dev'
     doi             = ''
 }
 
