--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,7 +18,7 @@ process {
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
-    // BWA mem2
+    // BWA MEM
     withName: "BWA_MEM" {
         ext.args = {[
             "-K 100000000",
@@ -41,6 +41,7 @@ process {
             "--LOD_THRESHOLD 5.0",
             "--EXIT_CODE_WHEN_MISMATCH 0",
             "--VALIDATION_STRINGENCY LENIENT",
+            "--ALLOW_DUPLICATE_READS true",
         ].join(" ").trim()}
     }
 
